# ot-steering

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROGRESS.md  PROJECT_PLAN.md  README.md  pyproject.toml
configs/datasets/: refusal_pairs.yaml  sentiment_pairs.yaml  truth_pairs.yaml
phases/phase_00_introduction/: README.md  chapter.md
phases/phase_01_ot_foundations/: README.md  chapter.md  notebook.ipynb  scratch_ot.py  scratch_sinkhorn.py
phases/phase_01_ot_foundations/experiments/: demo.py  make_figures.py
phases/phase_02_gromov_wasserstein/: README.md  chapter.md  notebook.ipynb
phases/phase_02_gromov_wasserstein/experiments/: demo.py  make_figures.py
phases/phase_03_llms_and_steering_baselines/: README.md  chapter.md  notebook.ipynb
phases/phase_03_llms_and_steering_baselines/experiments/: demo.py  make_figures.py  reproduce_sentiment.py
phases/phase_04_intra_model_ot_steering/: README.md  chapter.md  notebook.ipynb
phases/phase_04_intra_model_ot_steering/experiments/: compare_baselines.py  demo.py  make_figures.py
phases/phase_05_cross_model_gw/: README.md  chapter.md  notebook.ipynb
phases/phase_05_cross_model_gw/experiments/: demo.py  make_figures.py  sanity_checks.py
phases/phase_06_steering_transport/: README.md  REFUSAL_RESULTS.md  chapter.md  notebook.ipynb
phases/phase_06_steering_transport/experiments/: demo.py  make_figures.py  run_refusal_transport.py  run_transport.py
phases/phase_07_diagnostics/: README.md  chapter.md
phases/phase_07_diagnostics/experiments/: analyse_correlations.py  sweep.py
phases/phase_08_synthesis/: README.md  chapter.md  paper.md
scripts/: inspect_models.py  make_all_figures.py  verify_env.py
src/ot_steering/activations/: cache.py  datasets.py  extractor.py  model_loader.py
src/ot_steering/eval/: correlation.py  steering_eval.py
src/ot_steering/ot/: barycentric.py  emd.py  gw.py  sinkhorn.py
src/ot_steering/steering/: baselines.py  cross_model_align.py  ot_steering.py  transport.py  transport_baselines.py
src/ot_steering/utils/: config.py  logging.py  seed.py
tests/: conftest.py
tests/activations/: test_cache.py  test_datasets.py  test_extractor.py
tests/eval/: test_correlation.py  test_steering_eval.py
tests/ot/: test_barycentric.py  test_emd.py  test_gw.py  test_sinkhorn.py
tests/steering/: test_baselines.py  test_cross_model_align.py  test_ot_steering.py  test_transport.py
tests/utils/: test_config.py  test_logging.py  test_seed.py
